# paimon-mosaic

./: .gitignore  DEPENDENCIES.rust.tsv  NOTICE  README.md  deny.toml
.github/workflows/: ci.yml  interop.yml  publish_snapshot.yml  release-cpp.yml  release-java.yml  release-python-publish.yml  release-python.yml  release-rust.yml
cli/: Cargo.toml  DEPENDENCIES.rust.tsv  README.md
cli/examples/: gen.rs
cli/src/: filter.rs  fmt.rs  input.rs  jsonout.rs  main.rs
cli/tests/: e2e.rs
core/: Cargo.toml  DEPENDENCIES.rust.tsv
core/src/: bloom.rs  bpe.rs  bucket_reader.rs  bucket_writer.rs  lib.rs  reader.rs  reader_tests.rs  schema.rs  spec.rs  stats.rs  types.rs  writer.rs
core/tests/: array_type_test.rs  bloom_test.rs  data_patterns_test.rs  determinism_test.rs  encoding_compression_test.rs  format_verification_test.rs  fuzz_concurrent_test.rs  gen_fixtures.rs  interop_read_test.rs  interop_write_test.rs  massive_data_test.rs  robustness_test.rs  stress_test.rs
cpp/: CMakeLists.txt  bench_append.cpp  bench_common.hpp  bench_wide_table.cpp  test_mosaic.cpp
docs/: README.md  cli.html  complex-types.html  cpp-api.html  creating-a-release.html  design.html  index.html  java-api.html  python-api.html  releases.html  rust-api.html  verifying-a-release-candidate.html
ffi/: Cargo.toml  DEPENDENCIES.rust.tsv  build.rs  cbindgen.toml
ffi/src/: lib.rs
include/: arrow_c_data.h  mosaic.hpp
java/: pom.xml
jni/: Cargo.toml  DEPENDENCIES.rust.tsv
jni/src/: lib.rs
python/: pyproject.toml  setup.py
python/mosaic/: __init__.py  _ffi.py  mosaic.py
python/tests/: test_bloom.py  test_interop.py  (+2 more)
tools/: create_source_release.sh  update_branch_version.sh  validate_asf_yaml.py
(+23 files in other folders)
